[workspace]
members = [
  "integration-tests",
  "src/did",
  "src/deferred",
  "src/ekoke_erc20_swap",
  "src/ekoke_liquidity_pool",
  "src/ekoke_reward_pool",
  "src/icrc",
  "src/marketplace",
  "src/xrc",
]
resolver = "2"

[workspace.package]
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
edition = "2021"
license = "SEE LICENSE IN LICENSE"
readme = "README.md"
repository = "https://github.com/EKOKEtoken/ekoke"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
candid = "0.10"
ethers-contract = { version = "2", default-features = false, features = [
  "abigen",
] }
ethers-core = "2"
ethers-signers = "2"
ethnum = "1"
dip721-rs = "0.2"
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4"
ic-cdk = "0.15"
ic-cdk-macros = "0.15"
ic-cdk-timers = "0.9"
ic-stable-structures = "0.6"
ic-xrc-types = "1.2"
icrc-ledger-types = "0.1"
itertools = "0.13"
k256 = { version = "0.13", default-features = false, features = ["ecdsa-core"] }
num-bigint = "0.4"
num-traits = "0.2"
secp256k1 = "0.29"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1.0"
time = { version = "0.3.36", features = ["macros", "parsing"] }

[profile.dev]
debug = false

[profile.dev.package."*"]
opt-level = 2

[profile.dev.build-override]
opt-level = 2

[profile.release]
lto = true
opt-level = 'z'
