[package]
name = "integration-tests"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
did = { path = "../src/did" }
dip721-rs = { workspace = true }
icrc = { path = "../src/icrc" }
pocket-ic = "4"
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
xrc = { path = "../src/xrc" }

[dev-dependencies]
pretty_assertions = "1"
serial_test = "3"
time = { workspace = true }
tokio = { version = "1", features = ["full"] }
