[package]
name = "deferred"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "deferred-did"
path = "src/lib.rs"

[lib]
crate-type = ["cdylib"]

[features]
default = []
did = []

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
did = { path = "../did" }
dip721-rs = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
icrc = { path = "../icrc" }
itertools = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["full"] }
